--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ html {
 
 body {
 	font-family: "ff-clavo";
-	background-image: -webkit-linear-gradient(bottom left, #fc7279 10%, #ff7b9c65%, #ffc019 125%);
+	background-image: -webkit-linear-gradient(bottom left, #fc7279 10%, #ff7b9c 65%, #ffc019 125%);
 	background-image: linear-gradient(to top right,#fc7279 10%, #ff7b9c 65%, #ffc019 125%);
 	color: white;
 }
