--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,8 @@ html {
 body {
 	background-image: -webkit-linear-gradient(bottom left, #fc7279 10%, #ff7b9c 65%, #ffc019 125%);
 	background-image: linear-gradient(to top right,#fc7279 10%, #ff7b9c 65%, #ffc019 125%);
+	background-repeat: no-repeat;
+  background-attachment: fixed;
 	color: white;
 }
 
