--- a/css/style.css
+++ b/css/style.css
@@ -117,84 +117,25 @@ p {
 	color: white;
 }
 
-/*Experience*/
+/*Journal Entries*/
 
-.experience {
-	padding-left: 15px;
-	padding-right: 15px;
-	background-color: #faebd7;
+#journal .row {
+	min-height: 400px;
 }
 
-.projects {
-	padding: 20px 20px 20px 20px;
-	background-color: #faebd7;
+.date {
+	font-style: italic;
+	padding-right: 200px;
 }
 
-/*Portfolio*/
-
-.portfolio {
-	padding-right: 50px;
-	padding-left: 50px;
-	padding-top: 5px;
-	padding-bottom: 5px;
+.vid {
+	display: block;
+	margin: 0 auto;
 }
 
-.portfolioImages a img {
-	padding-top: 20px;
-	padding-bottom: 20px;
-}
-
-.pImages {
-	max-height: 350px;
-}
-
-.pImages p {
-  background: rgba(0,0,0,0.8);
-  color: white;
-  cursor: pointer;
-  display: table;
-  height: 100%;
-  left: 0;
-  position: absolute;
-  top: 0;
-  padding-left: 15px;
-  padding-right: 15px;
-  width: 100%;
-  opacity: 0;
-}
-
-.pImages p {
-	display: table-cell;
-  text-align: center;
-  vertical-align: middle;
-  padding-top: 160px;
-}
-
-.pImages p:hover {
-	opacity: 1;
-  -webkit-transition: all 1s ease;
-  -moz-transition: all 1s ease;
-  -o-transition: all 1s ease;
-  -ms-transition: all 1s ease;
-  transition: all 1s ease;
-}
-
-@media only screen and (max-width: 786px) {
-    .pImages p {
-        padding-top: 150px;
-    }
-}
-
-@media only screen and (max-width: 500px) {
-    .pImages p {
-        padding-top: 100px;
-    }
-}
-
-@media only screen and (max-width: 350px) {
-    .pImages p {
-        padding-top: 20px;
-    }
+.caption {
+	font-style: italic;
+	text-align: center;
 }
 
 /*Footer*/
